# electronics-suppliers

./: .env.example  .gitignore  README.md  pyproject.toml
companies/: admin.py  filters.py  models.py  permissions.py  serializer.py  tests.py  urls.py  views.py
companies/migrations/: 0001_initial.py
config/: settings.py  urls.py
products/: admin.py  filters.py  models.py  serializer.py  tests.py  urls.py  views.py
products/migrations/: 0001_initial.py  0002_alter_product_options_product_implementer_and_more.py  0003_alter_product_implementer.py  0004_alter_product_implementer.py
suppliers/: models.py  serializer.py  urls.py  views.py
suppliers/migrations/: 0001_initial.py
users/: admin.py  filters.py  models.py  permissions.py  serializer.py  tests.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py  0002_user_created_at_user_updated_at.py
